package Main.GameLogic;

public enum GameState {
    INTRO,
    SELECT_CHAR,
    IN_GAME,
    GAME_OVER,
    SELECT_PET
}
