@startuml
class Main.Button.PetsButton {
~ ImageView img
~ Image petImage
~ String name
~ Pet pet
+ <<Create>> PetsButton(Pet,int,double)
- OutlineTextImage setText(String,int,double)
- FavoriteButton buildFav()
+ ImageView getImg()
+ void setImg(ImageView)
+ Image getPetImage()
+ void setPetImage(Image)
+ Image getBackGround()
+ void setBackGround(Image)
+ String getName()
+ void setName(String)
+ String getDescription()
+ void setDescription(String)
+ Pet getPet()
+ void setPet(Pet)
}


class Main.Button.FavoriteButton {
+ <<Create>> FavoriteButton()
+ void setHeight(double)
}

class Main.Scene.PetsSelectionScene {
~ ImageView showImage
~ OutlineTextImage name
~ PetsButton ins1
- String txt
+ <<Create>> PetsSelectionScene()
+ ImageView getShowImage()
+ void setShowImage(ImageView)
+ ImageView getBackGroundImage()
+ void setBackGroundImage(ImageView)
+ OutlineTextImage getName()
+ void setName(OutlineTextImage)
+ OutlineTextImage getDescription()
+ void setDescription(OutlineTextImage)
+ PetsButton getIns1()
+ void setIns1(PetsButton)
+ PetsButton getIns2()
+ void setIns2(PetsButton)
+ PetsButton getIns3()
+ void setIns3(PetsButton)
+ PetsButton getIns4()
+ void setIns4(PetsButton)
+ String getTxt()
+ void setTxt(String)
- void enableSwap(PetsButton)
}


class Main.Scene.MainMenuScene {
+ <<Create>> MainMenuScene()
}

class Main.Scene.CookieSelectionScene {
~ CharacterButton block1
~ CharacterButton block2
~ CharacterButton block3
~ BaseButton block4
~ ImageView skillVideo
~ OutlineTextImage name
~ Animate cookie
~ CharacterButton selectButton
~ GridPane characterBoard
~ CharacterDisplay characterDisplay
+ <<Create>> CookieSelectionScene()
- void initCookieBtn()
- void enableShow(CharacterButton)
+ void setSkillVideo(ImageView)
+ void setName(OutlineTextImage)
+ void setDescription(OutlineTextImage)
+ void setRecord(OutlineTextImage)
+ void setCookie(Animate)
+ ImageView getSkillVideo()
+ OutlineTextImage getName()
+ OutlineTextImage getDescription()
+ OutlineTextImage getRecord()
+ Animate getCookie()
}


class Main.Button.NavSettingButton {
- OutlineTextImage outlineTextImage
- String txt
- SettingsPopUpButton settingsPopupButton
+ <<Create>> NavSettingButton(GameState,String,SettingsPopUpButton)
- DropShadow setShadow()
+ void handleClick()
+ void setInset(Insets)
+ String getTxt()
}


abstract class Main.Scene.BaseScene {
# Scene scene
# StackPane root
- {static} double BASE_WIDTH
- {static} double BASE_HEIGHT
+ <<Create>> BaseScene()
+ Region spacer(char)
}


class Main.Button.CharacterButton {
- String name
- String description
- String record
- Image image
- Cookie cookie
+ <<Create>> CharacterButton(ImageView,String,String,String,Image,Cookie)
+ void handleClick()
+ String getName()
+ String getDescription()
+ String getRecord()
+ Image getImage()
+ Cookie getCookie()
+ void setName(String)
+ void setDescription(String)
+ void setRecord(String)
+ void setImage(Image)
+ void setCookie(Cookie)
}


class Main.GameLogic.GameLogic {
- {static} IntegerProperty SCORE
- {static} int bestScore
- {static} double multiplier
- {static} MainGameScene app
- {static} int map
- {static} HpDisplayZone hpBar
- {static} int musicVolume
- {static} int sfxVolume
- {static} StackPane gameRoot
- {static} GameplayScene currentGameScene
- {static} ObjectProperty<GameState> GAME_STATE
- {static} Scene curScene
- {static} Stage stage
+ {static} int getScore()
+ {static} void setScore(int)
+ {static} void addScore(int)
+ {static} IntegerProperty scoreProperty()
+ {static} GameState getGameState()
+ {static} void setGameState(GameState)
+ {static} void setCurrentGameScene(GameplayScene)
+ {static} ObjectProperty<GameState> gameStateProperty()
+ {static} void setStage(Stage)
+ {static} void setCurScene(Scene)
+ {static} Scene getCurScene()
+ {static} Stage getStage()
+ {static} double getMultiplier()
+ {static} void setMultiplier(double)
+ {static} void setApp(MainGameScene)
+ {static} MainGameScene getApp()
+ {static} int getMap()
+ {static} void setMap(int)
+ {static} StackPane getGameroot()
+ {static} void setGameRoot(StackPane)
+ {static} void setBestScore(int)
+ {static} HpDisplayZone getHpBar()
+ {static} void setHpBar(HpDisplayZone)
+ {static} GameplayScene getCurrentGameScene()
+ {static} int getMusicVolume()
+ {static} void setMusicVolume(int)
+ {static} int getSFXVolume()
+ {static} void setSFXVolume(int)
}


class Main.Button.SettingsPopUpButton {
- Pane root
- StackPane overlay
- boolean isOpen
+ <<Create>> SettingsPopUpButton(ImageView,Pane)
+ void handleClick()
- void showSetting()
- void deleteThis(BaseButton)
- void runItBack(BaseButton)
+ Boolean getOpen()
+ void setOpen(Boolean)
}


enum Main.GameLogic.GameState {
+  INTRO
+  SELECT_CHAR
+  IN_GAME
+  GAME_OVER
+  SELECT_PET
}

class Main.Scene.GameplayScene {
~ Pane gameLayer
~ StackPane uiLayer
- MoveGround ground
- boolean shiftHeld
~ SettingZone settingZone
~ HpDisplayZone hpZone
~ ShowScore sc
- double groundH
+ {static} double groundY
- AnimationTimer timer
- Spawner spawner
+ boolean isUpdate
- InGameBG bg
- double deltatime
+ <<Create>> GameplayScene()
+ void stopGame()
+ void stopGameByBool()
+ void resumeGameByBool()
+ void stopEnvironment()
+ boolean isUpdate()
+ void setUpdate(boolean)
+ double getDeltatime()
+ void setDeltatime(double)
}


class Main.Button.NavigationButton {
- GameState switchState
+ <<Create>> NavigationButton(ImageView,GameState)
+ void handleClick()
+ GameState getSwitchState()
}


interface Main.Button.Clickable {
~ void handleClick()
~ void onHoverEnter()
~ void onHoverExit()
}

class Main.Button.MapSelectionButton {
- int mapNo
- MapPopupButton targetButton
+ <<Create>> MapSelectionButton(ImageView,MapPopupButton,int)
+ void handleClick()
}


class Main.Button.MapPopupButton {
- StackPane overlay
- StackPane root
- MapSelectionButton map1
- MapSelectionButton map2
- MapSelectionButton map3
+ <<Create>> MapPopupButton(ImageView,StackPane)
+ void setImg(ImageView)
+ void handleClick()
- void showMap()
- void deleteThis(MapSelectionButton)
}


class Main.Scene.GameOverScene {
+ <<Create>> GameOverScene()
}

class Main.Button.BaseButton {
- boolean isHovering
- boolean clicked
+ <<Create>> BaseButton(ImageView)
+ void handleClick()
+ void onHoverEnter()
+ void onHoverExit()
- void scaleTo(double)
+ void initializesButton()
}




Main.Button.BaseButton <|-- Main.Button.PetsButton
Main.Button.BaseButton <|-- Main.Button.FavoriteButton
Main.Scene.BaseScene <|-- Main.Scene.PetsSelectionScene
Main.Scene.BaseScene <|-- Main.Scene.MainMenuScene
Main.Scene.BaseScene <|-- Main.Scene.CookieSelectionScene
Main.Button.NavigationButton <|-- Main.Button.NavSettingButton
Main.Scene.StackPane <|-- Main.Scene.BaseScene
Main.Button.BaseButton <|-- Main.Button.CharacterButton
Main.Button.BaseButton <|-- Main.Button.SettingsPopUpButton
Main.Scene.BaseScene <|-- Main.Scene.GameplayScene
Main.Button.BaseButton <|-- Main.Button.NavigationButton
Main.Button.BaseButton <|-- Main.Button.MapSelectionButton
Main.Button.BaseButton <|-- Main.Button.MapPopupButton
Main.Scene.BaseScene <|-- Main.Scene.GameOverScene
Main.Button.Clickable <|.. Main.Button.BaseButton
javafx.scene.control.Button <|-- Main.Button.BaseButton
@enduml